2011-02-17  Csaba Osztrogonác  <ossy@webkit.org>

Reviewed by Andreas Kling.

        [Qt] ImageDiff sometimes hangs
        https://bugs.webkit.org/show_bug.cgi?id=54641

        * DumpRenderTree/qt/ImageDiff.cpp: Clear actualImage and baselineImage after all comparison.
        (main):

Canonical link: https://commits.webkit.org/68805@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78840 268f45cc-cd09-0410-ab3c-d52691b4dbfc